--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -5,20 +5,19 @@ on:
       - master
 
   workflow_dispatch:
-    branches:
-      - main
-      - master
 
 name: Build
-runs-on: ubuntu-latest
-steps:
-  - name: Checkout
-    uses: actions/checkout@v2
 
-  - name: Install dnsmasq
-    run: |
-      sudo apt-get update
-      sudo apt-get install -y dnsmasq
-      sudo systemctl enable dnsmasq
-      sudo systemctl start dnsmasq
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
+      - name: Install dnsmasq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y dnsmasq
+          sudo systemctl enable dnsmasq
+          sudo systemctl start dnsmasq
