--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -21,8 +21,10 @@ jobs:
 
       - name: Configure dnsmasq
         run: |
-          # Modify dnsmasq configuration to use a different port
-          sudo sed -i 's/#port=5353/port=5354/' /etc/dnsmasq.conf
+          # Modify dnsmasq configuration to use a different port if port 53 is already in use
+          if sudo netstat -tuln | grep ':53'; then
+            sudo sed -i 's/#port=5353/port=5354/' /etc/dnsmasq.conf
+          fi
 
       - name: Start dnsmasq
         run: sudo systemctl start dnsmasq
