--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -19,12 +19,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y dnsmasq
 
-      - name: Configure dnsmasq
+      - name: Start dnsmasq (ignoring port conflicts)
         run: |
-          # Modify dnsmasq configuration to use a different port if port 53 is already in use
-          if sudo netstat -tuln | grep ':53'; then
-            sudo sed -i 's/#port=5353/port=5354/' /etc/dnsmasq.conf
-          fi
-
-      - name: Start dnsmasq
-        run: sudo systemctl start dnsmasq
+          sudo systemctl start dnsmasq || true
