--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -17,8 +17,6 @@ jobs:
       - name: Install dnsmasq
         run: |
           sudo apt-get update
-          sudo apt-get install -y dnsmasq
+          sudo apt-get install -y git
+          git clone git://thekelleys.org.uk/dnsmasq.git 
 
-      - name: Start dnsmasq (ignoring port conflicts)
-        run: |
-          sudo systemctl start dnsmasq || true
