--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -4,7 +4,6 @@ on:
     branches:
       - main
       - master
-
   workflow_dispatch:
 
 jobs:
@@ -16,8 +15,5 @@ jobs:
 
       - name: Use the script
         run: |
-          sudo chmod +x ./SSL/SSL-Domain-Creation.sh
-          sudo ./SSL/SSL-Domain-Creation.sh
-
-          
-
+          sudo chmod +x ./SSL/SSL-General-Creation.sh
+          sudo ./SSL/SSL-General-Creation.sh "My_Certificate" "example.com"
